--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "icon": "./icon.svg"
   },
   "name": "logseq-mermaid-plugin",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "dist/index.html",
   "targets": {
@@ -19,8 +19,7 @@
   "author": "hkgnp",
   "license": "MIT",
   "dependencies": {
-    "@logseq/libs": "^0.0.1-alpha.34",
-    "mermaid": "^8.14.0"
+    "@logseq/libs": "^0.0.1-alpha.34"
   },
   "devDependencies": {
     "parcel": "^2.2.0"
