--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "icon": "./icon.svg"
   },
   "name": "logseq-mermaid-plugin",
-  "version": "1.0.10",
+  "version": "1.1.0",
   "description": "",
   "main": "dist/index.html",
   "targets": {
@@ -19,7 +19,9 @@
   "author": "hkgnp",
   "license": "MIT",
   "dependencies": {
-    "@logseq/libs": "^0.0.1-alpha.34"
+    "@logseq/libs": "^0.0.1-alpha.34",
+    "buffer": "^6.0.3",
+    "js-base64": "^3.7.2"
   },
   "devDependencies": {
     "parcel": "^2.2.0"
