--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	},
 	"dependencies": {
 		"@logseq/libs": "^0.0.15",
+		"js-base64": "^3.7.7",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1"
 	},
