--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "dev": "bunx vite",
     "build": "bunx tsc && bunx vite build",
-    "preview": "bunx vite preview"
+    "prepare": "husky"
   },
   "release": {
     "branches": [
@@ -48,6 +48,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "husky": "^9.1.7",
     "prettier": "^3.7.4",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.51.0",
