--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "scripts": {
     "dev": "bunx vite",
-    "build": "bunx tsc && bunx vite build",
-    "prepare": "husky"
+    "build": "bunx vite build",
+    "build:plugin": "bunx eslint . --fix && bunx tsc && bunx vite build",
+    "prepare": "husky",
+    "lint:precommit": "echo \"Running eslint\" && bunx eslint . --fix && echo \"Running tsc\" && tsc && echo \"Running build\" && bun run build"
   },
   "release": {
     "branches": [
