--- a/package.json
+++ b/package.json
@@ -14,19 +14,15 @@
     "build": "bunx vite build",
     "build:plugin": "bunx eslint . --fix && bunx tsc && bunx vite build",
     "prepare": "husky",
-    "lint:precommit": "echo \"Running eslint\" && bunx eslint . --fix && echo \"Running tsc\" && tsc && echo \"Running build\" && bun run build"
+    "lint:precommit": "echo \"Running biome\" && bunx @biomejs/biome check --write . && echo \"Running tsc\" && tsc && echo \"Running build\" && bun run build"
   },
   "release": {
-    "branches": [
-      "main"
-    ],
+    "branches": ["main"],
     "plugins": [
       [
         "@semantic-release/github",
         {
-          "assets": [
-            "logseq-mermaid-plugin.zip"
-          ]
+          "assets": ["logseq-mermaid-plugin.zip"]
         }
       ]
     ]
@@ -38,22 +34,12 @@
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
-    "@types/eslint": "^9.6.1",
-    "@types/eslint-config-prettier": "^6.11.3",
+    "@biomejs/biome": "2.3.11",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "@typescript-eslint/eslint-plugin": "^8.51.0",
-    "@typescript-eslint/parser": "^8.51.0",
-    "eslint": "^9.8.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
     "husky": "^9.1.7",
-    "prettier": "^3.7.4",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.51.0",
     "vite": "^7.3.0",
     "vite-plugin-logseq": "^1.1.2",
     "vite-tsconfig-paths": "^6.0.3"
