--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,42 +1,31 @@
 {
-	"compilerOptions": {
-		"jsx": "react-jsx",
-		"target": "es2017",
-		"lib": [
-			"dom",
-			"dom.iterable",
-			"esnext"
-		],
-		"allowJs": true,
-		"checkJs": true,
-		"skipLibCheck": true,
-		"strict": true,
-		"forceConsistentCasingInFileNames": true,
-		"noEmit": true,
-		"esModuleInterop": true,
-		"module": "esnext",
-		"moduleResolution": "node",
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"incremental": true,
-		"noUncheckedIndexedAccess": true,
-		"baseUrl": "./",
-		"paths": {
-			"../*": [
-				"src/*"
-			]
-		}
-	},
-	"include": [
-		"**/*.ts",
-		"**/*.tsx",
-		"**/*.cjs",
-		"**/*.mjs"
-	],
-	"exclude": [
-		"node_modules",
-		"./dist/**/*",
-		"./screenshots",
-		"tailwind.config.js"
-	]
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "target": "es2017",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "checkJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "incremental": true,
+    "noUncheckedIndexedAccess": true,
+    "baseUrl": "./",
+    "paths": {
+      "../*": ["src/*"]
+    }
+  },
+  "include": ["**/*.ts", "**/*.tsx", "**/*.cjs", "**/*.mjs"],
+  "exclude": [
+    "node_modules",
+    "./dist/**/*",
+    "./screenshots",
+    "tailwind.config.js"
+  ]
 }
