--- a/biome.json
+++ b/biome.json
@@ -2,7 +2,12 @@
   "$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
   "vcs": { "enabled": true, "clientKind": "git", "useIgnoreFile": true },
   "files": {
-    "includes": ["**", "!!**/dist", "!!mermaid/mermaid.min.js", "!!**/mermaid.min.js"]
+    "includes": [
+      "**",
+      "!!**/dist",
+      "!!mermaid/mermaid.min.js",
+      "!!**/mermaid.min.js"
+    ]
   },
   "formatter": {
     "enabled": true,
